--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <div class="Section4_options">
                 <div class="option1">
-                    <img src="/assests/les_carnets_de_mel.jpg" alt="">
+                    <img src="./assests/les_carnets_de_mel.jpg" alt="">
                     <div class="text">
                         <p>TIPS & ADVICE</p>
                         <h3>8 best places to visit in Sicily</h3>
