--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lonely Planet| Travel Guide</title>
-    <link rel="icon" href="/assests/icon.png">
+    <link rel="icon" href="./assests/icon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -55,7 +55,7 @@
             <div class="Travel-stories">TRAVEL STORIES AND NEWS</div>
             <div class="Explore">Explore our latest stories</div>
             <div class="banner">
-                <img src="/assests/GettyRF_594201133.jpg" alt="">
+                <img src="./assests/GettyRF_594201133.jpg" alt="">
             </div>
         </div>
         <div class="section4_2">
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="option2">
-                    <img src="/assests/richardwhitetravels.jpg" alt="">
+                    <img src="./assests/richardwhitetravels.jpg" alt="">
                     <div class="text">
                         <p>TIPS & ADVICE</p>
                         <h3>8 best places to visit in Sicily</h3>
@@ -82,7 +82,7 @@
 
                     </div></div>
                 <div class="option3">
-                    <img src="/assests/ali-vonlewinski.jpg" alt="">
+                    <img src="./assests/ali-vonlewinski.jpg" alt="">
                     <div class="text">
                         <p>TIPS & ADVICE</p>
                         <h3>8 best places to visit in Sicily</h3>
@@ -90,7 +90,7 @@
 
                     </div></div>
                 <div class="option4">
-                    <img src="/assests/dominik-kobler.jpg" alt="">
+                    <img src="./assests/dominik-kobler.jpg" alt="">
                     <div class="text">
                         <p>TIPS & ADVICE</p>
                         <h3>8 best places to visit in Sicily</h3>
@@ -112,18 +112,18 @@
     <div class="section6">
         <div class="lovelyplanet">#lovelyplanet</div>
         <div class="carousel">
-            <img src="/assests/GettyRF_1056342320.jpg" alt="">
-            <img src="/assests/dominik-kobler.jpg" alt="">
-            <img src="/assests/les_carnets_de_mel.jpg" alt="">
-            <img src="/assests/GettyRF_594201133.jpg" alt="">
-            <img src="/assests/ali-vonlewinski.jpg" alt="">
+            <img src="./assests/GettyRF_1056342320.jpg" alt="">
+            <img src="./assests/dominik-kobler.jpg" alt="">
+            <img src="./assests/les_carnets_de_mel.jpg" alt="">
+            <img src="./assests/GettyRF_594201133.jpg" alt="">
+            <img src="./assests/ali-vonlewinski.jpg" alt="">
         </div>
         <div class="social">
             <div class="follow">FOLLOW LOVELY PLANET:</div>
-            <a href="https://www.facebook.com/lonelyplanet/"><img src="/assests/facebook.png" alt="facebook"></a>
-            <a href="https://www.instagram.com/lonelyplanet/"><img src="/assests/instagram.png" alt="instagram"></a>
-            <a href="https://twitter.com/lonelyplanet/"><img src="/assests/twitter.png" alt="twitter"></a>
-            <a href="https://www.tiktok.com/@lonelyplanet/"><img src="/assests/tiktok.png" alt="tiktok"></a>
+            <a href="https://www.facebook.com/lonelyplanet/"><img src="./assests/facebook.png" alt="facebook"></a>
+            <a href="https://www.instagram.com/lonelyplanet/"><img src="./assests/instagram.png" alt="instagram"></a>
+            <a href="https://twitter.com/lonelyplanet/"><img src="./assests/twitter.png" alt="twitter"></a>
+            <a href="https://www.tiktok.com/@lonelyplanet/"><img src="./assests/tiktok.png" alt="tiktok"></a>
         </div>
     </div>
     <footer>
@@ -133,11 +133,11 @@
             <p>For Explorers Everywhere</p>
             <h4>FOLLOW US</h4>
             <div class="social">
-                <img src="/assests/coloredfacebook.png" alt="">
-                <img src="/assests/coloredtwitter.png" alt="">
-                <img src="/assests/coloredintagram.png" alt="">
-                <img src="/assests/coloredyoutube.png" alt="">
-                <img src="/assests/coloredpinterest.png" alt="">
+                <img src="./assests/coloredfacebook.png" alt="">
+                <img src="./assests/coloredtwitter.png" alt="">
+                <img src="./assests/coloredintagram.png" alt="">
+                <img src="./assests/coloredyoutube.png" alt="">
+                <img src="./assests/coloredpinterest.png" alt="">
             </div>
             <h4>BECOME A MEMBER</h4>
             <h2>Join the Lonely Planet community of travelers</h2>
