--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 
 <body>
     <div class="section1">
-        <div class="navbar"></div>
+        <div class="navbar">
+            <div class="search"><img src="./assests/Search.png" alt="m">Search</div>
+            <div class="logo"><img src="./assests/logo.png" alt="ice"></div>
+            <div class="nav">
+                <button>Destination</button>
+                <button>Planning</button>
+                <button>Stories</button>
+                <button>Shop</button>
+                <button class="SignIn">Sign in</button>
+            </div>
+        </div>
         <div class="quote">Discover story-worthy travel moments</div>
         <div class="box">
             <div class="pic1">
