--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <button>Planning</button>
                 <button>Stories</button>
                 <button>Shop</button>
-                <button class="SignIn">Sign in</button>
+                <button class="SignIn">SignIn</button>
             </div>
         </div>
         <div class="quote">Discover story-worthy travel moments</div>
