--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="search"><img src="./assests/Search.png" alt="m">Search</div>
             <div class="logo"><img src="./assests/logo.png" alt="ice"></div>
             <div class="nav" id="myLinks">
+                <img src="./assests/logo.png" alt="">
                 <button>Destination</button>
                 <button>Planning</button>
                 <button>Stories</button>
